--- a/Módulo3Katas.ipynb
+++ b/Módulo3Katas.ipynb
@@ -41,13 +41,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Peligro! Se acerca un asteroide a una velocidad de: 49 Km/s \n",
+            "Es necesaro revisar ruta.\n"
+          ]
+        }
+      ],
       "source": [
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
+        "\n",
+        "vel = 49\n",
+        "\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
-        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false."
+        "\n",
+        "alert = vel>25\n",
+        "\n",
+        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false.\n",
+        "\n",
+        "if alert:\n",
+        "    print(f'Peligro! Se acerca un asteroide a una velocidad de: {vel} Km/s \\nEs necesaro revisar ruta.')\n",
+        "else:\n",
+        "    print(f'El asteroide no presenta peligro.\\nVelocidad actual del asteroide: {vel} Km/s')"
       ]
     },
     {
@@ -59,12 +79,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Un asteroide ha pasado por la orbita.\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
+        "\n",
+        "vel = 19\n",
+        "\n",
         "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
+        "\n",
+        "rayo = vel>=20\n",
+        "if rayo:\n",
+        "    print(\"Mira el cielo!!! Un rayo de luz!!!\")\n",
+        "elif not(rayo):\n",
+        "    print(\"Un asteroide ha pasado por la orbita.\")\n",
+        "else:\n",
+        "    print(\"No hay nada en el cielo.\")\n",
+        "\n",
+        "\n",
         "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False"
       ]
     },
@@ -99,13 +140,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Alerta de impacto un meterito de 400 metros cubicos impactara en la tierra\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
+        "\n",
+        "vel = int(input(\"Dime la velocidad del asteroide.\\n\"))\n",
+        "size = int(input(\"Dime el size del asteroide.\\n\"))\n",
+        "\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
-        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra."
+        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra.\n",
+        "\n",
+        "impacto = (size>25 and size<1000)\n",
+        "luz = vel>=20\n",
+        "\n",
+        "if impacto:\n",
+        "    print(f'Alerta de impacto un meterito de {size} metros cubicos impactara en la tierra')\n",
+        "elif luz:\n",
+        "    print(f'Mira el cielo una estela de luz! (Sin peligro de impacto).')\n",
+        "elif not(luz) or not(impacto):\n",
+        "    print(\"Sin nada que reportar.\")\n",
+        "else:\n",
+        "    print(\"Algo anda mal revisar sitemas\")"
       ]
     },
     {
@@ -231,7 +296,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.9.10"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
