--- a/Módulo3Katas.ipynb
+++ b/Módulo3Katas.ipynb
@@ -167,7 +167,7 @@
         "    print(f'Alerta de impacto un meterito de {size} metros cubicos impactara en la tierra')\n",
         "elif luz:\n",
         "    print(f'Mira el cielo una estela de luz! (Sin peligro de impacto).')\n",
-        "elif not(luz) or not(impacto):\n",
+        "elif not(luz) and not(impacto):\n",
         "    print(\"Sin nada que reportar.\")\n",
         "else:\n",
         "    print(\"Algo anda mal revisar sitemas\")"
