--- a/Módulo4Katas.ipynb
+++ b/Módulo4Katas.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -37,11 +37,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['Interesting facts about the Moon',\n",
+              " \"The Moon is Earth's only satellite\",\n",
+              " 'There are several interesting facts about the Moon and how it affects life here on Earth',\n",
+              " '\\nOn average, the Moon moves 4cm away from the Earth every year',\n",
+              " 'This yearly drift is not significant enough to cause immediate effects on Earth',\n",
+              " 'The highest daylight temperature of the Moon is 127 C.']"
+            ]
+          },
+          "execution_count": 70,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Añade el código necesario"
+        "##Oraciones\n",
+        "text_parts = text.split('. ')\n",
+        "text_parts"
       ]
     },
     {
@@ -53,11 +71,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Define las palabras pista: average, temperature y distance suenan bien"
+        "# Define las palabras pista: average, temperature y distance suenan bien\n",
+        "llaves_entrada = [\"avarage\", \"temperature\", \"distance\"]\n",
+        "\n"
       ]
     },
     {
@@ -69,11 +89,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The highest daylight temperature of the Moon is 127 C.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ciclo for para recorrer la cadena"
+        "# Ciclo for para recorrer la cadena\n",
+        "for texts_parts in text_parts:\n",
+        "    for entrada in llaves_entrada:\n",
+        "        if entrada in texts_parts:\n",
+        "            print(texts_parts)\n",
+        "            break"
       ]
     },
     {
@@ -85,11 +118,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The highest daylight temperature of the Moon is 127 Celsius.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ciclo para cambiar C a Celsius"
+        "# Ciclo para cambiar C a Celsius\n",
+        "for texts_parts in text_parts:\n",
+        "    for entrada in llaves_entrada:\n",
+        "        if entrada in texts_parts:\n",
+        "            print(texts_parts.replace('C', 'Celsius'))\n",
+        "            break"
       ]
     },
     {
@@ -121,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -140,11 +186,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos el título"
+        "# Creamos el título\n",
+        "\n",
+        "title = f'Gravity Facts about {name}\\n'\n",
+        "title = title.title()\n"
       ]
     },
     {
@@ -156,11 +205,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos la plantilla"
+        "# Creamos la plantilla\n",
+        "paraf = f'----------------------------\\n Planet Name: {planet}\\n Gravity on {name}\\n Gravity on {planet}: {gravity*100} m/s2'\n"
       ]
     },
     {
@@ -172,11 +222,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gravity Facts About Moon\n",
+            " ----------------------------\n",
+            " Planet Name: Earth\n",
+            " Gravity on Moon\n",
+            " Gravity on Earth: 0.16199999999999998 m/s2\n"
+          ]
+        }
+      ],
       "source": [
-        "# Unión de ambas cadenas"
+        "# Unión de ambas cadenas\n",
+        "finalt = f'{title} {paraf}'\n",
+        "print(finalt)"
       ]
     },
     {
@@ -195,12 +259,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cosas sobre la Moon\n",
+            "\n",
+            " La gravedad que ejerce la Earth sobre la Moon, es de: 0.16199999999999998 \n",
+            " Algo muy interesante verdad.\n"
+          ]
+        }
+      ],
       "source": [
         "# Comprueba la plantilla\n",
-        "# print(nombre_plantilla)"
+        "planeta = \"Marte\"\n",
+        "gravedad  = 0.00143\n",
+        "nombre = \"Ganímedes\"\n",
+        "print(finalt)"
       ]
     },
     {
@@ -212,11 +290,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Nueva plantilla"
+        "# Nueva plantilla\n",
+        "# Comprueba la plantilla\n",
+        "planet = \"Marte\"\n",
+        "gravity  = 0.00143\n",
+        "name = \"Ganímedes\"\n"
       ]
     },
     {
@@ -228,11 +310,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gravity Facts About Moon\n",
+            " ----------------------------\n",
+            " Planet Name: Earth\n",
+            " Gravity on Moon\n",
+            " Gravity on Earth: 0.16199999999999998 m/s2\n"
+          ]
+        }
+      ],
       "source": [
-        "# Pista: print(nueva_plantilla.format(variables))"
+        "new_temp = '''Gravity Facts About {name}\n",
+        " ----------------------------\n",
+        " Planet Name: {planet}\n",
+        " Gravity on {name}\n",
+        " Gravity on {planet}: 0.16199999999999998 m/s2'''\n",
+        "\n",
+        "print(new_temp.format(name=name, planet=planet, gravity=gravity))"
       ]
     },
     {
@@ -251,9 +351,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['Interesting facts about the Moon',\n",
+              " \"The Moon is Earth's only satellite\",\n",
+              " 'There are several interesting facts about the Moon and how it affects life here on Earth',\n",
+              " '\\nOn average, the Moon moves 4cm away from the Earth every year',\n",
+              " 'This yearly drift is not significant enough to cause immediate effects on Earth',\n",
+              " 'The highest daylight temperature of the Moon is 127 C.']"
+            ]
+          },
+          "execution_count": 41,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Divide el texto\n",
         "text_parts = text.split('. ')\n",
@@ -262,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -272,9 +388,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            "The highest daylight temperature of the Moon is 127 C.\n"
+          ]
+        }
+      ],
       "source": [
         "# Ciclo for para recorrer la cadena\n",
         "for sentence in text_parts:\n",
@@ -307,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -320,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -330,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -343,9 +469,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Marte  \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Unión de ambas cadenas\n",
         "template = f\"\"\"{title.title()} \n",
@@ -438,7 +575,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
