--- a/Módulo5Katas.ipynb
+++ b/Módulo5Katas.ipynb
@@ -24,12 +24,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Crear variables para almacenar las dos distancias\n",
-        "# ¡Asegúrate de quitar las comas!"
+        "# ¡Asegúrate de quitar las comas!\n",
+        "\n",
+        "dist_tierra = 149597870\n",
+        "dist_jupiter = 778547200"
       ]
     },
     {
@@ -43,11 +46,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Calcular la distancia entre planetas"
+        "# Calcular la distancia entre planetas\n",
+        "dist_km = -(dist_tierra-dist_jupiter)\n",
+        "dist_mi = dist_km * 0.621\n"
       ]
     },
     {
@@ -90,12 +95,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Almacenar las entradas del usuario\n",
-        "#Pista: variable = input(\"¿Cuál es tu nombre?\")"
+        "\n",
+        "\n",
+        "dat_crud = input('Dame la distancia de el primer planeta')\n",
+        "dat_crud2 = input('Dame la distancia de el segundo planeta')"
       ]
     },
     {
@@ -108,11 +116,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Convierte las cadenas de ambos planetas a números enteros"
+        "# Convierte las cadenas de ambos planetas a números enteros\n",
+        "dat1 = int(dat_crud)\n",
+        "dat2 = int(dat_crud2)"
       ]
     },
     {
@@ -126,14 +136,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "km 10     millas 6.221\n"
+          ]
+        }
+      ],
       "source": [
         "# Realizar el cálculo y determinar el valor absoluto\n",
+        "rest = abs(valabs - valabs2)\n",
         "\n",
         "\n",
-        "# Convertir de KM a Millas"
+        "# Convertir de KM a Millas\n",
+        "rest_mil = rest * 0.6221\n",
+        "\n",
+        "print(f'km={rest}     millas={rest_mil}')"
       ]
     },
     {
@@ -280,7 +302,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
