--- a/Módulo6Katas.ipynb
+++ b/Módulo6Katas.ipynb
@@ -27,12 +27,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos la lista planets y la mostramos"
+        "# Creamos la lista planets y la mostramos\n",
+        "lista = ['Mercurio','Venus','Tierra','Marte','Jupiter','Saturno','Urano','Neptuno']"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -43,11 +51,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Mercurio', 'Venus', 'Tierra', 'Marte', 'Jupiter', 'Saturno', 'Urano', 'Neptuno', 'Pluton']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agregamos a plutón y mostramos el último elemento"
+        "# Agregamos a plutón y mostramos el último elemento\n",
+        "lista = lista + ['Pluton']\n",
+        "print(lista)"
       ]
     },
     {
@@ -77,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -96,11 +114,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Solicitamos el nombre de un planeta *Pista:  input()*"
+        "# Solicitamos el nombre de un planeta *Pista:  input()*\n",
+        "name = input('Dame el nombre del planeta')"
       ]
     },
     {
@@ -113,11 +132,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Busca el planeta en la lista"
+        "# Busca el planeta en la lista\n",
+        "index = planets.index(name)"
       ]
     },
     {
@@ -131,11 +151,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El los planetas mas cercanos al sol a partir de Venus\n",
+            "\n",
+            "Planetas: ['Mercury']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra los planetas más cercanos al sol"
+        "# Muestra los planetas más cercanos al sol\n",
+        "print(f'El los planetas mas cercanos al sol a partir de {name} son:\\n')\n",
+        "print(f'Planetas: {planets[0:index]}')"
       ]
     },
     {
@@ -149,11 +181,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El los planetas mas lejanos al sol a partir de Venus son:\n",
+            "\n",
+            "Planetas: ['Earth', 'Mars', 'Jupiter', 'Saturn', 'Neptune']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra los planetas más lejanos al sol"
+        "# Muestra los planetas más lejanos al sol\n",
+        "print(f'El los planetas mas lejanos al sol a partir de {name} son:\\n')\n",
+        "print(f'Planetas: {planets[index + 1 :]}')"
       ]
     },
     {
@@ -292,7 +336,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
