--- a/Módulo7Katas.ipynb
+++ b/Módulo7Katas.ipynb
@@ -29,7 +29,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Declara dos variables"
+        "# Declara dos variables\n",
+        "new_planet = ''\n",
+        "planets = []"
       ]
     },
     {
@@ -51,7 +53,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Escribe el ciclo while solicitado"
+        "# Escribe el ciclo while solicitado\n",
+        "while planet != 'done'"
       ]
     },
     {
