--- a/Módulo7Katas.ipynb
+++ b/Módulo7Katas.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -49,12 +49,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Escribe el ciclo while solicitado\n",
-        "while planet != 'done'"
+        "while new_planet.lower() != 'done':\n",
+        "    new_planet = input('Dime el nombre del planeta:\\n')\n",
+        "    if new_planet and new_planet.lower() != 'done':\n",
+        "        planets.append(new_planet.title())\n"
       ]
     },
     {
@@ -88,11 +91,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Jupiter\n",
+            "Saturno\n",
+            "Urano\n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu ciclo for para iterar en una lista de planetas"
+        "# Escribe tu ciclo for para iterar en una lista de planetas\n",
+        "for planet in planets:\n",
+        "    print(planet)"
       ]
     },
     {
@@ -190,7 +205,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
