--- a/Módulo8Katas.ipynb
+++ b/Módulo8Katas.ipynb
@@ -40,11 +40,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Crea un diccionario llamado planet con los datos propuestos"
+        "# Crea un diccionario llamado planet con los datos propuestos\n",
+        "planet = {\n",
+        "    'name': 'Mars',\n",
+        "    'moons': 2\n",
+        "    }"
       ]
     },
     {
@@ -56,11 +60,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El planeta Mars, tiene 2 lunas\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra el nombre del planeta y el número de lunas que tiene."
+        "# Muestra el nombre del planeta y el número de lunas que tiene.\n",
+        "print(f'El planeta {planet.get(\"name\")}, tiene {planet.get(\"moons\")} lunas')"
       ]
     },
     {
@@ -84,11 +97,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Agrega la clave circunferencia con los datos proporcionados previamente"
+        "# Agrega la clave circunferencia con los datos proporcionados previamente\n",
+        "planet['circunferencia (km)'] = {\n",
+        "    'polar': 6752,\n",
+        "    'equatorial': 6792\n",
+        "\n",
+        "}\n",
+        "\n"
       ]
     },
     {
@@ -100,11 +119,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El planeta Mars, tiene una circunferencia de 6752\n"
+          ]
+        }
+      ],
       "source": [
-        "# Imprime el nombre del planeta con su circunferencia polar."
+        "# Imprime el nombre del planeta con su circunferencia polar.\n",
+        "print(f'El planeta {planet[\"name\"]}, tiene una circunferencia polar es de {planet[\"circunferencia (km)\"][\"polar\"]}')"
       ]
     },
     {
@@ -131,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -164,11 +192,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Añade el código para determinar el número de lunas."
+        "# Añade el código para determinar el número de lunas.\n",
+        "moons = planet_moons.values()\n",
+        "planets = len(planet_moons.keys())"
       ]
     },
     {
@@ -180,11 +221,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "17.833333333333332"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Agrega el código para contar el número de lunas. "
+        "# Agrega el código para contar el número de lunas. \n",
+        "total_moons = 0\n",
+        "for moon in moons:\n",
+        "    total_moons = moon + total_moons\n",
+        "avar = total_moons / planets\n",
+        "avar"
       ]
     },
     {
@@ -260,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -277,9 +334,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "17.833333333333332\n"
+          ]
+        }
+      ],
       "source": [
         "# Calcula el total_moons agregando todas las lunas\n",
         "# Almacena su valor en una variable llamada total_moons\n",
@@ -330,7 +395,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
