--- a/Módulo9Katas.ipynb
+++ b/Módulo9Katas.ipynb
@@ -29,11 +29,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función para leer 3 tanques de combustible y muestre el promedio\n"
+        "# Función para leer 3 tanques de combustible y muestre el promedio\n",
+        "def report_info(tank1,tank2,tank3):\n",
+        "    avarege = (tank1+tank2+tank3)/3    \n",
+        "    return F'''    Total = {avarege} \n",
+        "    Tanque 1: {tank1}\n",
+        "    Tanque 2: {tank2}\n",
+        "    Tanque 3: {tank3}\n",
+        "    '''\n"
       ]
     },
     {
@@ -45,12 +52,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Total = 20.0 \n",
+            "    Tanque 1: 10\n",
+            "    Tanque 2: 20\n",
+            "    Tanque 3: 30\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
-        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))"
+        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))\n",
+        "print(report_info(10,20,30))"
       ]
     },
     {
@@ -62,11 +81,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función promedio "
+        "# Función promedio\n",
+        "def avarage (values):\n",
+        "    total = sum(values)\n",
+        "    divisor = len(values)\n",
+        "    prommedio = total/divisor\n",
+        "avarage([1,2,3,5,6,7,8,8,9])"
       ]
     },
     {
@@ -78,11 +102,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Actualiza la función"
+        "# Actualiza la función\n",
+        "def generate_report(tank1, tank2, tank3):\n",
+        "    return f\"\"\"Fuel Report:\n",
+        "    Total Average: {average([tank1, tank2, tank3])}%\n",
+        "    Main tank: {tank1}%\n",
+        "    External tank: {tank2}%\n",
+        "    Hydrogen tank: {tank3}% \n",
+        "    \"\"\"\n"
       ]
     },
     {
@@ -109,11 +140,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Destino de la mision: Acapulco.\n",
+            "    Tiempo de vuelo: 105 hrs.\n",
+            "    Combustible restante: 150 lts.\n",
+            "    Informe finalizado.\n",
+            "     \n"
+          ]
+        }
+      ],
       "source": [
-        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno"
+        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno\n",
+        "def rocket_report(launch_time, fly_time, dest, tank_ext, tank_int):\n",
+        "    print(f\"\"\"\n",
+        "    Destino de la mision: {dest}. \n",
+        "    Tiempo de vuelo: {(launch_time + fly_time)} hrs.\n",
+        "    Combustible restante: {tank_ext + tank_int} lts.\n",
+        "    Informe finalizado.\n",
+        "     \"\"\")\n",
+        "\n",
+        "rocket_report(5, 100,'Acapulco', 50, 100)"
       ]
     },
     {
@@ -125,11 +178,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Destino de la mision: Pluton. \n",
+            "    Tiempo de vuelo: 110 hrs.\n",
+            "    Combustible restante: 2100 lts.\n",
+            "    Informe finalizado.\n",
+            "     \n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función de reporte considerando lo anterior"
+        "# Escribe tu nueva función de reporte considerando lo anterior\n",
+        "def rocket_report(dest, *minutes, **fuel_reservoirs):\n",
+        "        print(f\"\"\"\n",
+        "    Destino de la mision: {dest}. \n",
+        "    Tiempo de vuelo: {sum(minutes)} hrs.\n",
+        "    Combustible restante: {sum(fuel_reservoirs.values())} lts.\n",
+        "    Informe finalizado.\n",
+        "     \"\"\")\n",
+        "\n",
+        "rocket_report('Pluton', 10, 30, 50 , 20, main_tank= 1000, second_tank=1000, rocket_tank = 100)\n"
       ]
     },
     {
@@ -141,11 +216,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Destino de la mision: Pluton. \n",
+            "    Tiempo de vuelo: 110 hrs.\n",
+            "    Combustible restante: 2100 lts.\n",
+            "    main_tank gas restante --> 1000  \n",
+            "    second_tank gas restante --> 1000  \n",
+            "    rocket_tank gas restante --> 100  \n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función"
+        "# Escribe tu nueva función\n",
+        "\n",
+        "def rocket_report(dest, *minutes, **fuel_reservoirs):\n",
+        "    report = f\"\"\"\n",
+        "    Destino de la mision: {dest}. \n",
+        "    Tiempo de vuelo: {sum(minutes)} hrs.\n",
+        "    Combustible restante: {sum(fuel_reservoirs.values())} lts.\n",
+        "    \"\"\"\n",
+        "    for tanks, fuel_tank in fuel_reservoirs.items():\n",
+        "        report += f\"\"\"{tanks} gas restante --> {fuel_tank}  \n",
+        "    \"\"\"\n",
+        "    return print(report)\n",
+        "\n",
+        "rocket_report('Pluton', 10, 30, 50 , 20, main_tank= 1000, second_tank=1000, rocket_tank = 100)\n"
       ]
     },
     {
@@ -164,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -182,9 +285,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fuel Report:\n",
+            "    Total Average: 78.33333333333333%\n",
+            "    Main tank: 80%\n",
+            "    External tank: 70%\n",
+            "    Hydrogen tank: 85% \n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))\n",
         "print(generate_report(80, 70, 85))"
@@ -192,9 +308,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "82.0"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Función promedio \n",
         "def average(values):\n",
@@ -222,7 +349,7 @@
         "    \"\"\"\n",
         "\n",
         "# Call the updated function again with different values\n",
-        "print(generate_report(88, 76, 70))"
+        "3"
       ]
     },
     {
@@ -234,9 +361,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 65 minutes\n",
+            "    Total fuel left: 500000 gallons\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno\n",
         "\n",
@@ -252,9 +391,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 76 minutes\n",
+            "    Total fuel left: 500000\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "# Escribe tu nueva función de reporte considerando lo anterior\n",
         "\n",
@@ -264,7 +415,6 @@
         "    Total travel time: {sum(minutes)} minutes\n",
         "    Total fuel left: {sum(fuel_reservoirs.values())}\n",
         "    \"\"\"\n",
-        "\n",
         "print(mission_report(\"Moon\", 10, 15, 51, main=300000, external=200000))"
       ]
     },
@@ -324,7 +474,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
